--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -41,6 +41,14 @@ body{
 .ps-sidebar-root{
     @apply !border-r-2 !border-[#ffffff11]
 }
+.avatar-tiny span{
+    @apply !h-6 !w-6
+}
+.MuiBottomNavigationAction-root{
+    @apply dark:text-white
+}
+
+
 
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
@@ -52,3 +60,26 @@ input[type=number] {
     -moz-appearance:textfield;
 }
 
+
+.swiper-wrapper{
+    padding-top: 10px;
+    padding-bottom: 35px;
+  }
+  .swiper-pagination {
+    margin-top: 120px; /* Adjust as needed */
+  }
+  .swiper-pagination-bullet {
+    background: #333 !important;
+    width: 10px;
+    height: 10px;
+    opacity: 0.5;
+    margin: 0 5px;
+    cursor: pointer;
+  }
+  .dark .swiper-pagination-bullet{
+    background: #fff !important;
+  }
+  .swiper-pagination-bullet-active {
+    opacity: 1;
+  }
+  
